code/kub/createNamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev2023
  labels:
    name: dev2023
