code/kub/msv01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msv01
  namespace: dev2023
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msv01
  template:
    metadata:
      labels:
        app: msv01
    spec:
      containers:
        - name: msv01
          image: iamjc321/msv01:1.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: msv01
  namespace: dev2023
spec: 
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: msv01
