code/kub/msv02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msv02
  namespace: dev2023
spec:
  selector:
    matchLabels:
      app: msv02
  replicas: 1
  template:
    metadata:
      labels:
        app: msv02
    spec:
      containers:
        - name: msv02
          image: iamjc321/msv02
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: msv02
  namespace: dev2023
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: msv02
